# servant-bobkonf-2017

./: .gitignore  README.md  servant-bobkonf.cabal  stack.yaml
src-main/: Client.hs  Server.hs
src/TimeTracker/: API.hs  Client.hs  Library.hs  Server.hs
