name: servant-bobkonf
version: 2017.1
license: BSD3
author: Andres Löh <andres@well-typed.com>
synopsis: Code for Bobkonf 2017 Servant tutorial
cabal-version: >= 1.24
build-type: Simple

library
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends:
    aeson                 >= 1.0.2 && < 1.2,
    base                  >= 4.9   && < 5,
    http-client           >= 0.5.5 && < 0.6,
    optparse-applicative  >= 0.13  && < 0.14,
    -- postgresql-simple     >= 0.5.2 && < 0.6,
    servant               >= 0.9   && < 0.11,
    servant-client        >= 0.9   && < 0.11,
    servant-server        >= 0.9   && < 0.11,
    servant-swagger       >= 1.1.2 && < 1.2,
    servant-swagger-ui    >= 0.2.2 && < 0.3,
    stm                   >= 2.4   && < 2.5,
    swagger2              >= 2.1   && < 2.2,
    text                  >= 1.2.2 && < 1.3,
    time                  >= 1.6   && < 1.7,
    transformers          >= 0.5   && < 0.6,
    wai                   >= 3.2   && < 3.3,
    warp                  >= 3.2   && < 3.3
  default-extensions:
    DataKinds,
    DeriveGeneric,
    FlexibleContexts,
    PolyKinds,
    TypeApplications,
    TypeOperators
